--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-:root{
+:root{ /*Aqui se define las variables para colores que se usaran en toda la pagina */
     --blanco: #ffffff;
     --oscuro: #212121;
     --primario: #FFC107;
@@ -9,70 +9,70 @@
 }
 /*  Globales **/
 html{
-    font-size: 62.5%;
-    box-sizing: border-box;
-    scroll-snap-type: y mandatory;
+    font-size: 62.5%; /*Facilita el uso del rem (1rem=10px*/
+    box-sizing: border-box;  /*Ajusta el tamaño de los elementos incluyendo padding y bordes*/
+    scroll-snap-type: y mandatory; /* Hace que el scroll se detenga en ciertas secciones*/
 }
 /*Scroll Snap*/
 .servicios,
 .navegacion-principal,
 .formulario {
-    scroll-snap-align: center;
-    scroll-snap-stop: always;
+    scroll-snap-align: center; /* Centra la sección al hacer scroll */
+    scroll-snap-stop: always; /* Obliga a detenerse en esta sección */
 }
 
 *, *:before, *:after {/*Soluciona los problemas del box-sizing*/
-    box-sizing: inherit;
+    box-sizing: inherit; /* Hereda el box-sizing para todos los elementos */
 }
 body{
-    font-size: 16px;
+    font-size: 16px; /* Tamaño base del texto */
     font-family: "Krub", serif;/*Fuente de google Fonts, el link se coloca en el HTML*/
-    background-image: linear-gradient(to top, var(--grisClaro)  0%, var(--blanco) 100%);
+    background-image: linear-gradient(to top, var(--grisClaro)  0%, var(--blanco) 100%); /* Fondo con degradado */
 }
 .contenedor{
     max-width: 120rem;/*Toma 1200 pixeles maximo*/
-    margin: 0 auto;
+    margin: 0 auto; /* Centra el contenedor */
 }
 .boton {
-    background-color: var(--secundario);
-    color: var(--blanco);
-    padding: 1rem 3rem;
-    margin-top: 3rem;
-    font-size: 2rem;
+    background-color: var(--secundario); /* Color de fondo */
+    color: var(--blanco); /* Color del texto */
+    padding: 1rem 3rem; /* Espaciado interno */
+    margin-top: 3rem; /* Margen superior */
+    font-size: 2rem; /* Tamaño del texto */
     text-decoration: none;/*Elimina el subrayado*/
     text-transform: uppercase;/*Texto en mayusculas*/
-    font-weight: bold;/*Le dio engrosor a la letra, se puede colocar 700, es lo mismo que bold*/
-    border-radius: .5rem;/*El boton de contactar queda un poco redondeado en las esquinas*/
-    width: 90%;
-    text-align: center;
-    border: none;
+    font-weight: bold;/*Texto en negrita, se puede colocar 700, es lo mismo que bold*/
+    border-radius: .5rem;/* Bordes redondeados */
+    width: 90%; /* Ancho del botón */
+    text-align: center; /* Centra el texto */
+    border: none; /* Sin borde */
 }
 @media (min-width: 768px) {
     .boton {
-        width: auto;
+        width: auto; /* Ajusta el ancho automáticamente en pantallas grandes */
     }
 }
 .boton:hover{
-    cursor: pointer;
+    cursor: pointer; /* Cambia el cursor a una mano al pasar el mouse */
 }
 .sombra{
-    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);/*El gradiente sacado de la pagina CSS matic*/ 
-    background-color: var(--blanco);
-    padding: 2rem;
-    border-radius: 1rem;
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);/*El gradiente sacado de la pagina CSS matic / Sombra */ 
+    background-color: var(--blanco); /* Fondo blanco */
+    padding: 2rem; /* Espaciado interno */
+    border-radius: 1rem; /* Bordes redondeados */
 }
 /*Tipografias*/
 h1 {
-    font-size: 3.8rem;  /*1rem = 10px*/
+    font-size: 3.8rem;  /*1rem = 10px*/ /* Título grande */
 }
 h2 {
-    font-size: 2.8rem;
+    font-size: 2.8rem; /* Título mediano */
 }
 h3 {
-    font-size: 1.8rem;
+    font-size: 1.8rem; /* Título pequeño */
 }
 h1,h2,h3 {
-    text-align: center;
+    text-align: center; /* Centra los títulos */
 }
 
 /*Titulos*/ 
@@ -100,7 +100,7 @@ h1,h2,h3 {
 }
 /*Navegacion principal*/ 
 .nav-bg{
-    background-color: var(--secundario);
+    background-color: var(--secundario); /* Fondo azul */
 }
 .navegacion-principal{
     display: flex;/*Activa el modelo de diseño flexible*/
@@ -110,106 +110,106 @@ h1,h2,h3 {
 @media (min-width: 768px) {
     .navegacion-principal{
         flex-direction: row;/*Direccion en fila*/
-        justify-content: space-between;
+        justify-content: space-between; /* Espacio entre enlaces */
     }   
 }
 
 .navegacion-principal a {
-    display: block;
-    text-align: center;
-    color: var(--blanco);
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: 700;/*Le agrega a la letra un color mas negro*/
-    padding: 1rem;
+    display: block; /* Hace que los enlaces ocupen toda la línea */
+    text-align: center; /* Centra el texto */
+    color: var(--blanco); /* Color del texto */
+    text-decoration: none; /* Elimina el subrayado */
+    font-size: 2rem; /* Tamaño del texto */
+    font-weight: 700;/* Texto en negrita */
+    padding: 1rem; /* Espaciado interno */
 }
 
 .navegacion-principal a:hover{
-    background-color: var(--primario);
-    color: var(--oscuro);
+    background-color: var(--primario); /* Cambia el fondo al pasar el mouse */
+    color: var(--oscuro); /* Cambia el color del texto */
    
 }
 /*Hero*/ 
 .hero {
-    background-image: url(../img/hero.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;/*Tamaño de la imagen*/
-    height: 450px;
-    position: relative;
-    margin-bottom: 2rem;
+    background-image: url(../img/hero.jpg); /* Imagen de fondo */
+    background-repeat: no-repeat; /* No repetir la imagen */
+    background-size: cover;/* Cubrir todo el espacio */
+    height: 450px; /* Altura fija */
+    position: relative; /* Posición relativa para el contenido interno */
+    margin-bottom: 2rem; /* Margen inferior */
 
  
 }
 
 .contenido-hero {
-    position: absolute;
-    background-color: rgba(0, 0, 0, .7);/*Anterior*/
-    background-color: rgb(0 0 0 / 70%);
-    width: 100%; 
-    height: 100%;
+    position: absolute;  /* Posición absoluta para superponer contenido */
+    background-color: rgba(0, 0, 0, .7); /* Fondo semitransparente */
+    background-color: rgb(0 0 0 / 70%); /* Es lo mismo que el anterior solo escrita de una forma diferente */
+    width: 100%; /* Ancho completo */
+    height: 100%; /* Altura completa */
 
-    display: flex;
+    display: flex; /* Activa el diseño flexible */
     flex-direction: column;/*Este codigo alinea y centra verticalmente*/
-    align-items: center;
-    justify-content: center;
+    align-items: center;  /* Centra horizontalmente */
+    justify-content: center; /* Centra verticalmente */
 
 }
 
 .contenido-hero h2, 
 .contenido-hero p {
-    color: var(--blanco);
+    color: var(--blanco); /* Texto blanco */
 
 }
 
 .contenido-hero .ubicacion {
-    display: flex;
-    align-items: flex-end;
+    display: flex; /* Activa el diseño flexible */
+    align-items: flex-end;/*coloca los elementos al final del contenedor (en la parte inferior). */
 }
 
 
 /*Servicios*/
 @media (min-width: 768px) {
     .servicios {
-        display: grid;/*Activa el modelo de diseño Grid*/
-        grid-template-columns: repeat(3, 1fr);
+        display: grid;/*Activa el modelo de diseño Grid cuadricula*/
+        grid-template-columns: repeat(3, 1fr); /* 3 columnas */
         column-gap: 5rem;/*Separacion de las columnas*/
     
      }
 }
 
 .servicio {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: flex; /* Activa el diseño flexible */
+    flex-direction: column; /* Alinea el contenido en columna */
+    align-items: center;  /* Centra horizontalmente */
 }
 
 .servicio h3 {
-    color: var(--secundario);
-    font-weight: normal;
+    color: var(--secundario); /* Color del título */
+    font-weight: normal; /* Texto normal (no negrita) */
 }
 
 .servicio p {
     line-height: 2;/*Interlineado*/
-    text-align: center;
+    text-align: center; /* Centra el texto */
 }
 
 .servicio .iconos {
-    height: 15rem;
-    width: 15rem;
-    background-color: var(--primario);
-    border-radius: 50%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    height: 15rem; /* Altura del ícono */
+    width: 15rem; /* Ancho del ícono */
+    background-color: var(--primario); /* Fondo amarillo */
+    border-radius: 50%; /* Forma circular */
+    display: flex; /* Activa el diseño flexible */
+    justify-content: space-evenly; /* Espacio entre elementos */
+    align-items: center;  /* Centra verticalmente */
 }
 
 /*Contacto*/
 .formulario{
-    background-color: var(--gris);
-    width: min ( 60rem, 100%);/*Utliza el valor mas pequeño y nos ahorramos media Queris*/
-    margin: 0 auto;
-    padding: 2rem;
-    border-radius: 1rem;
+    background-color: var(--gris); /* Fondo gris */
+    width: min ( 60rem, 100%);/*Utliza el valor mas pequeño y nos ahorramos media Queris Ancho máximo de 60rem*/
+    margin: 0 auto; /* Centra el formulario */
+    padding: 2rem; /* Espaciado interno */
+    border-radius: 1rem; /* Bordes redondeados */
 }
 
 .formulario fieldset {
@@ -218,52 +218,52 @@ h1,h2,h3 {
 }
 
 .formulario legend {
-    text-align: center;
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-bottom: 2rem;
-    color: var(--primario);
+    text-align: center; /* Centra el texto */
+    font-size: 1.8rem;  /* Tamaño del texto */
+    text-transform: uppercase; /* Texto en mayúsculas */
+    font-weight: 700; /* Texto en negrita */
+    margin-bottom: 2rem; /* Margen inferior */
+    color: var(--primario); /* Color del texto */
 }
 
 @media (min-width: 768px ) {
     .contenedor-campos{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto auto 20rem;
-        column-gap: 1rem;
+        display: grid; /* Activa el diseño de cuadrícula */
+        grid-template-columns: repeat(2, 1fr); /* 2 columnas */
+        grid-template-rows: auto auto 20rem; /* 3 filas */
+        column-gap: 1rem; /* Espacio entre columnas */
     }
 }
 
 .campo:nth-child(3),
 .campo:nth-child(4) { /*Selecciono la clase campo, pero con nth-child() la clase campo 3 y 4*/
-    grid-column: 1 / 3;
+    grid-column: 1 / 3; /* Ocupa 2 columnas */
     
 }
 
 .campo {
-    margin-bottom: 1rem;
+    margin-bottom: 1rem; /* Margen inferior */
 
 }
 
 .campo label {
-    color: var(--blanco);
-    font-weight: bold;
-    margin-bottom: .5rem;
-    display: block;
+    color: var(--blanco); /* Color del texto */
+    font-weight: bold; /* Texto en negrita */
+    margin-bottom: .5rem; /* Margen inferior */
+    display: block; /* Hace que el label ocupe toda la línea */
 }
 
 .campo textarea {
-    height: 20rem;
+    height: 20rem; /* Altura del área de texto */
 }
 .input-text {
-    width: 100%;
-    border: none;
-    padding: 1.5rem;
-    border-radius: .5rem;
+    width: 100%; /* Ancho completo */
+    border: none; /* Sin borde */
+    padding: 1.5rem; /* Espaciado interno */
+    border-radius: .5rem; /* Bordes redondeados */
 
 }
 /*Footer*/
 .footer {
-    text-align: center;
+    text-align: center; /* Centra el texto */
 }
